--- a/.github/workflows/code-testing.yml
+++ b/.github/workflows/code-testing.yml
@@ -21,8 +21,8 @@ jobs:
           sudo apt install -y g++ cmake cppcheck python3 python3-pip
           pip install pytest pylint
 
-      - name: Run C++ Static Analysis (CPPCheck)
-        run: cppcheck --enable=all --error-exitcode=1 code/ # or src/
+      # - name: Run C++ Static Analysis (CPPCheck)
+      #   run: cppcheck --enable=all --error-exitcode=1 code/ # or src/
 
       # - name: Build and Test C++ Code
       #   run: |
